--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@ img {
                       <p>Recently unbanned me.  Has fire Snaps.</p>
                     </div>
             </div>
+            <div class="card container">
+              <img src="wyatt.jpg" style="width:100% flex center">
+              <div class="container">
+                <h4><b>Gus</b></h4>
+                <p>Old prospector.  Probably has a sharingan.</p>
+              </div>
+      </div>
         </div>    
     </body>
 </html>
