--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         Nerd City
     </title>
     <head>
-        Nerd City
+        <h1 class= "flex center">Nerd City</h1>;
     </head>
     <style>
 .card {
@@ -71,6 +71,14 @@ img {
               <div class="container">
                 <h4><b>Gus</b></h4>
                 <p>Old prospector.  Probably has a sharingan.</p>
+                </div>
+              </div>
+              <div class="card container">
+                <img src="kevin.jpg" style="width:100% flex center">
+                <div class="container">
+                  <h4><b>Left Butthole</b></h4>
+                  <p>Found his ideal profile picture and never changed it.</p>
+                </div>
               </div>
       </div>
         </div>    
